--- a/OneDrive/Desktop/AFRICANCOUSINE/cart.html
+++ b/OneDrive/Desktop/AFRICANCOUSINE/cart.html
@@ -304,10 +304,12 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="js/config.js"></script>
+    <script src="js/config.js?v=3"></script>
     <script src="js/utils.js"></script>
     <script src="js/cart.js"></script>
     <script src="js/checkout.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
+
+
