--- a/OneDrive/Desktop/AFRICANCOUSINE/admin-menu.html
+++ b/OneDrive/Desktop/AFRICANCOUSINE/admin-menu.html
@@ -121,6 +121,13 @@
         </div>
     </div>
 
+        <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+    
+    <!-- Your Config -->
+    <script src="js/config-v4.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/admin-auth.js"></script>
     <script src="js/admin-menu.js"></script>
