--- a/OneDrive/Desktop/AFRICANCOUSINE/cart.html
+++ b/OneDrive/Desktop/AFRICANCOUSINE/cart.html
@@ -304,7 +304,13 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="js/config-v4.js?v=3"></script>
+        <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+    
+    <!-- Your Config -->
+    <script src="js/config-v4.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/cart.js"></script>
     <script src="js/checkout.js"></script>
