--- a/OneDrive/Desktop/AFRICANCOUSINE/index.html
+++ b/OneDrive/Desktop/AFRICANCOUSINE/index.html
@@ -138,6 +138,13 @@
         </div>
     </footer>
 
+        <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+    
+    <!-- Your Config -->
+    <script src="js/config-v4.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/cart.js"></script>
     <script src="js/menu.js"></script>
