--- a/OneDrive/Desktop/AFRICANCOUSINE/cart.html
+++ b/OneDrive/Desktop/AFRICANCOUSINE/cart.html
@@ -9,6 +9,125 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
+
+/* Dark Theme for Checkout */
+.customer-info-section {
+    background: #1a1a2e;
+    color: #eee;
+    padding: 20px;
+    border-radius: 8px;
+    margin: 20px 0;
+    border: 2px solid #16213e;
+}
+
+.customer-info-section h3 {
+    color: #e94560;
+    margin-bottom: 15px;
+    border-bottom: 2px solid #e94560;
+    padding-bottom: 10px;
+}
+
+.info-row {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0;
+    border-bottom: 1px solid #16213e;
+}
+
+.info-label {
+    font-weight: bold;
+    color: #a0a0a0;
+}
+
+.info-value {
+    color: #fff;
+    font-weight: 500;
+}
+
+.payment-method {
+    background: #0f3460;
+    color: #fff;
+    padding: 15px;
+    border-radius: 5px;
+    border-left: 4px solid #e94560;
+    margin-top: 15px;
+}
+
+.payment-method h4 {
+    color: #e94560;
+    margin: 0 0 10px 0;
+}
+
+.cart-section {
+    background: #16213e;
+    color: #eee;
+}
+
+.cart-item {
+    background: #1a1a2e;
+    border: 1px solid #0f3460;
+}
+
+.item-price {
+    color: #e94560;
+    font-weight: bold;
+}
+
+.checkout-btn {
+    background: #e94560;
+    color: white;
+}
+
+.checkout-btn:hover {
+    background: #c13651;
+}
+
+
+/* Make customer info more visible */
+.customer-info-section {
+    background: #f8f9fa;
+    padding: 20px;
+    border-radius: 8px;
+    margin: 20px 0;
+    border: 2px solid #ddd;
+}
+
+.customer-info-section h3 {
+    color: #333;
+    margin-bottom: 15px;
+    border-bottom: 2px solid #007bff;
+    padding-bottom: 10px;
+}
+
+.info-row {
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 0;
+    border-bottom: 1px solid #eee;
+}
+
+.info-label {
+    font-weight: bold;
+    color: #555;
+}
+
+.info-value {
+    color: #000;
+    font-weight: 500;
+}
+
+.payment-method {
+    background: #e8f5e9;
+    padding: 15px;
+    border-radius: 5px;
+    border-left: 4px solid #4caf50;
+    margin-top: 15px;
+}
+
+.payment-method h4 {
+    color: #2e7d32;
+    margin: 0 0 10px 0;
+}
         .cart-section {
             padding: 120px 0 60px;
             min-height: 80vh;
@@ -318,5 +437,7 @@
 <script src="js/main.js"></script>
 </body>
 </html>
+
+
 
 
